<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_example</name>
  <version>0.0.0</version>
  <description>ROS 2 Example Package with Custom Interfaces</description>
  <maintainer email="cknam0708@sju.ac.kr">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>custom_interfaces</depend>
  <depend>ros2_action</depend>
  <depend>ros2_service</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
